--- a/html/ex022/fundo006.html
+++ b/html/ex022/fundo006.html
@@ -3,20 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posicionamento</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
+            /*
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            */
+
+            /*
+            Shorthand - background
+                color > image > position > [size] > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid rgb(224, 212, 33);
@@ -27,6 +38,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis voluptatem dolore repellat dolores aspernatur tempore fugiat, earum suscipit laborum magni doloremque temporibus explicabo obcaecati doloribus placeat commodi sequi, aliquam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus iste voluptatum architecto numquam aliquid. Nostrum iusto inventore, optio blanditiis aperiam, earum cupiditate exercitationem in perspiciatis distinctio, harum ratione odit aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum non est obcaecati illum quo, veniam laborum totam iure voluptatibus quidem blanditiis nam quae corrupti explicabo, facere error quasi in. Odio.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis voluptatem dolore repellat dolores aspernatur tempore fugiat, earum suscipit laborum magni doloremque temporibus explicabo obcaecati doloribus placeat commodi sequi, aliquam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus iste voluptatum architecto numquam aliquid. Nostrum iusto inventore, optio blanditiis aperiam, earum cupiditate exercitationem in perspiciatis distinctio, harum ratione odit aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum non est obcaecati illum quo, veniam laborum totam iure voluptatibus quidem blanditiis nam quae corrupti explicabo, facere error quasi in. Odio.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis voluptatem dolore repellat dolores aspernatur tempore fugiat, earum suscipit laborum magni doloremque temporibus explicabo obcaecati doloribus placeat commodi sequi, aliquam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus iste voluptatum architecto numquam aliquid. Nostrum iusto inventore, optio blanditiis aperiam, earum cupiditate exercitationem in perspiciatis distinctio, harum ratione odit aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum non est obcaecati illum quo, veniam laborum totam iure voluptatibus quidem blanditiis nam quae corrupti explicabo, facere error quasi in. Odio.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis voluptatem dolore repellat dolores aspernatur tempore fugiat, earum suscipit laborum magni doloremque temporibus explicabo obcaecati doloribus placeat commodi sequi, aliquam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus iste voluptatum architecto numquam aliquid. Nostrum iusto inventore, optio blanditiis aperiam, earum cupiditate exercitationem in perspiciatis distinctio, harum ratione odit aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum non est obcaecati illum quo, veniam laborum totam iure voluptatibus quidem blanditiis nam quae corrupti explicabo, facere error quasi in. Odio.</p>
