Atualização de textos e blocos

--- a/html/desafios-html/d012/index.html
+++ b/html/desafios-html/d012/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <heade>
+    <header>
         <h1>
             Cordel Moderno
         </h1>
@@ -15,7 +15,7 @@
         <p>
             Por: <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
         </p>
-    </heade>
+    </header>
 
     <section class="normal">
         <p>
