--- a/html/exercicios-html/ex025/form006.html
+++ b/html/exercicios-html/ex025/form006.html
@@ -18,7 +18,7 @@
 		</p>
 		<p>
 			<input type="submit" value="Enviar">
-			<input type="submit" value="Limpar">
+			<input type="reset" value="Limpar">
 		</p>
 		<p>
 			<label for="ifoto"> Foto de perfil: </label>
